package com.example.apartment_predictor.model;

import jakarta.persistence.Column;
import jakarta.persistence.Id;
import jakarta.persistence.MappedSuperclass;

@MappedSuperclass
public abstract class Person {

    @Id
    protected String id;

    @Column(nullable = false)
    protected String fullName;

    @Column(nullable = false, unique = true)
    protected String email;

    protected String phone;

    public String getId() {
        return id;
    }

    public String getFullName() {
        return fullName;
    }

    public String getEmail() {
        return email;
    }

    public String getPhone() {
        return phone;
    }
}
