@startuml
skinparam classAttributeIconSize 0

' =========================
' PERSON HIERARCHY
' =========================

abstract class Person {
    id : String
    fullName : String
    email : String
    phone : String
}

class Owner {
    isActive : boolean
    isBusiness : boolean
    registrationDate : LocalDate
}

class Reviewer {
    reputationScore : int
}

Person <|-- Owner
Person <|-- Reviewer


' =========================
' PROPERTY HIERARCHY
' =========================

abstract class ResidentialProperty {
    id : String
    price : Long
    area : Integer
    bedrooms : Integer
}

class Apartment {
    bathrooms : Integer
    stories : Integer
}

class House {
    garageQty : int
    roofType : String
    garden : String
}

class Duplex {
    balcony : String
    elevator : boolean
}

ResidentialProperty <|-- Apartment
ResidentialProperty <|-- House
ResidentialProperty <|-- Duplex


' =========================
' CONTRACT
' =========================

class PropertyContract {
    id : String
    startDate : LocalDate
    endDate : LocalDate
}

Owner "1" -- "0..*" PropertyContract
PropertyContract "1" -- "1" ResidentialProperty


' =========================
' REVIEW SYSTEM
' =========================

class Review {
    id : String
    comment : String
    rating : int
    reviewDate : LocalDate
}

ResidentialProperty "1" -- "0..*" Review
Reviewer "1" -- "0..*" Review


' =========================
' SCHOOL RELATION
' =========================

class School {
    id : String
    name : String
    type : String
    location : String
}

ResidentialProperty "0..*" -- "0..*" School

@enduml
